--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,1 +1,13 @@
-/* You can add global styles to this file, and also import other style files */
+body{
+  background-image: url('./assets/space2.jpeg');
+  font-size: 24px;
+}
+
+@font-face {
+  font-family: 'In your face, joffrey!';
+  src: url('./assets/In\ your\ face\,\ joffrey!.ttf');
+}
+
+* {
+  font-family: 'In your face, joffrey!';
+}
