another build prod

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,11 +1,11 @@
 body{
-  background-image: url('./assets/space2.jpeg');
+  background-image: url('assets/space2.jpeg');
   font-size: 24px;
 }
 
 @font-face {
   font-family: 'In your face, joffrey!';
-  src: url('./assets/In\ your\ face\,\ joffrey!.ttf');
+  src: url('assets/In\ your\ face\,\ joffrey!.ttf');
 }
 
 * {
