--- a/src/app/_components/emergency/emergency.component.html
+++ b/src/app/_components/emergency/emergency.component.html
@@ -1,7 +1,7 @@
 <div class="wrapper">
   <h1> CALL AN EMERGENCY, QUICK! </h1>
   <button type="button" class="emergency" (click)="emergencyClick()">
-    <img src="assets/emergency.png" alt="emergency-btn">
+    <img src="/assets/emergency.png" alt="emergency-btn">
   </button>
   <img
     src="/assets/Emergency_Meeting.0.png"
