--- a/src/app/_pages/message-content/message-content.component.scss
+++ b/src/app/_pages/message-content/message-content.component.scss
@@ -5,7 +5,7 @@
   align-items: stretch;
   padding: 5vh 25vw 5vh 20vw;
   height: 80vh;
-  background-image: url('/assets/meeting.png');
+  background-image: url('assets/meeting.png');
   background-repeat: no-repeat;
   background-size: 60vw 80vh;
   background-position: center;
